Solve layout shift

--- a/assets/scss/sass/layout/hero.sass
+++ b/assets/scss/sass/layout/hero.sass
@@ -1,6 +1,6 @@
 $hero-body-padding: 3rem 1.5rem !default
 $hero-body-padding-small: 1.5rem !default
-$hero-body-padding-medium: 9rem 1.5rem !default
+$hero-body-padding-medium: 6rem 1.5rem !default
 $hero-body-padding-large: 18rem 1.5rem !default
 
 $hero-colors: $colors !default
